# embedding-factory

./: pyproject.toml
src/embedding_factory/: __init__.py  embedding_factory.py
src/embedding_factory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pgvector_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
